--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.gitignore.io/api/pycharm,python,django
 # Edit at https://www.gitignore.io/?templates=pycharm,python,django
 
+.vscode
 .idea/
 */migrations
 */*/migrations
@@ -13,6 +14,7 @@ __pycache__/
 local_settings.py
 db.sqlite3
 media
+.sql
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
