--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,14 @@ lazy-object-proxy==1.4.1
 lxml==4.3.3
 mccabe==0.6.1
 parso==0.4.0
+pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
-psycopg2
-psycopg2-binary
+psycopg2-binary==2.8.3
+ptyprocess==0.6.0
 pycparser==2.19
 Pygments==2.4.2
-pylint==2.3.1
-pyOpenSSL==19.0.0
+pyTelegramBotAPI==3.6.6
 python-crontab==2.3.6
 python-dateutil==2.8.0
 pytz==2019.1
