--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ decorator==4.4.0
 Django==2.2.1
 django-celery-beat==1.5.0
 django-celery-results==1.1.2
+django-cors-headers==3.0.2
 django-field-history==0.7.0
+django-liqpay==1.1
 django-timezone-field==3.0
 fake-useragent==0.1.11
 flower==0.9.3
